kubernetes/prod/apps/security/authentik/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/target: ipv4.${CLUSTER_SECRET_PRD_DOMAIN}
    ingress.kubernetes.io/ssl-redirect: "true"
    meta.helm.sh/release-name: authentik
    meta.helm.sh/release-namespace: security
    nginx.ingress.kubernetes.io/custom-http-errors: "418"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "480"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: authentik
    app.kubernetes.io/managed-by: Helm
    chart: authentik
    helm.toolkit.fluxcd.io/name: authentik
    helm.toolkit.fluxcd.io/namespace: security
    heritage: Helm
    release: authentik
  name: authentik-opnsense-ingress
  namespace: security
spec:
  ingressClassName: external
  rules:
    - host: sso.${CLUSTER_SECRET_PRD_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: authentik-server
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sso.${CLUSTER_SECRET_PRD_DOMAIN}
      secretName: "${CLUSTER_SECRET_PRD_DOMAIN/./-}-tls"
